# NinjaHSM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  conanfile.py  library.json  library.properties
.github/workflows/: cmake-single-platform.yml
cmake/: arm-none-eabi.cmake
examples/basic_example/: CMakeLists.txt  main.cpp
include/NinjaHSM/: NinjaHSM.hpp  State.hpp  StateMachine.hpp
src/: NinjaHsm.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/NinjaHSM/: State.hpp  StateMachine.hpp
test/: CMakeLists.txt  compile_check.cpp  tests.cpp
test/cmake_fetch_content/: CMakeLists.txt  main.cpp
test/standard/: CMakeLists.txt  tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
